“热门”画廊解析

--- a/EhentaiSpider/EhentaiSpider.csproj
+++ b/EhentaiSpider/EhentaiSpider.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="0.16.1" />
+    <PackageReference Include="ComponentUtil.Common" Version="0.3.8" />
+  </ItemGroup>
+
 </Project>
