--- a/EhentaiSpider/EhentaiSpider.csproj
+++ b/EhentaiSpider/EhentaiSpider.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Authors>Removable</Authors>
+    <PackageProjectUrl>https://github.com/Removable/EhentaiSpider</PackageProjectUrl>
+    <PackageVersion>0.0.1</PackageVersion>
+    <Description>A simple Ehentai.org spider</Description>
+    <Copyright>Removable</Copyright>
+    <RepositoryUrl>https://github.com/Removable/EhentaiSpider</RepositoryUrl>
+    <Version>0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
