--- a/EhentaiSpider/EhentaiSpider.csproj
+++ b/EhentaiSpider/EhentaiSpider.csproj
@@ -7,11 +7,11 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Removable</Authors>
     <PackageProjectUrl>https://github.com/Removable/EhentaiSpider</PackageProjectUrl>
-    <PackageVersion>0.1.4</PackageVersion>
+    <PackageVersion>0.2.0-alpha1</PackageVersion>
     <Description>A simple E-hentai.org spider</Description>
     <Copyright>Removable</Copyright>
     <RepositoryUrl>https://github.com/Removable/EhentaiSpider</RepositoryUrl>
-    <Version>0.1.4</Version>
+    <Version>0.2.0-alpha1</Version>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
